--- a/example/src/main/res/layout/content_main.xml
+++ b/example/src/main/res/layout/content_main.xml
@@ -15,4 +15,11 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
+<!--  <ViewStub-->
+<!--    android:layout="@layout/activity_main"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"/>-->
+
+<!--  <include layout="@layout/activity_main"/>-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
