--- a/example/src/main/res/values/themes.xml
+++ b/example/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
   <!-- Base application theme. -->
   <style name="Theme.IdGuard" parent="Theme.AppCompat.Light.DarkActionBar">
     <!-- Primary brand color. -->
@@ -11,5 +11,9 @@
   <style name="Base.Theme.IdGuard" parent="Theme.Material3.DayNight.NoActionBar">
     <!-- Customize your light theme here. -->
     <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+  </style>
+
+  <style name="TestLayoutSS">
+    <item name="android:layout">@layout/activity_main</item>
   </style>
 </resources>
