--- a/example/src/main/res/layout/content_main.xml
+++ b/example/src/main/res/layout/content_main.xml
@@ -15,11 +15,21 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-<!--  <ViewStub-->
-<!--    android:layout="@layout/activity_main"-->
-<!--    android:layout_width="wrap_content"-->
-<!--    android:layout_height="wrap_content"/>-->
+  <ImageView
+    android:id="@+id/image_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@mipmap/ic_launcher"
+    app:layout_constraintBottom_toTopOf="@id/textview"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
-<!--  <include layout="@layout/activity_main"/>-->
+  <!--  <ViewStub-->
+  <!--    android:layout="@layout/activity_main"-->
+  <!--    android:layout_width="wrap_content"-->
+  <!--    android:layout_height="wrap_content"/>-->
+
+  <!--  <include layout="@layout/activity_main"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
