--- a/example/src/main/res/layout/content_main.xml
+++ b/example/src/main/res/layout/content_main.xml
@@ -25,6 +25,21 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
+  <TextView
+    android:id="@+id/donine_text"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="20dp"
+    android:layout_marginTop="20dp"
+    android:background="@drawable/bg_distance"
+    android:ellipsize="end"
+    android:maxLines="2"
+    android:text="@string/lorem_ipsum"
+    android:textSize="20sp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/textview" />
+
   <!--  <ViewStub-->
   <!--    android:layout="@layout/activity_main"-->
   <!--    android:layout_width="wrap_content"-->
