--- a/example/src/main/res/layout/content_main.xml
+++ b/example/src/main/res/layout/content_main.xml
@@ -40,6 +40,15 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/textview" />
 
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recycler_view"
+    android:layout_width="0dp"
+    android:layout_height="120dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/donine_text" />
+
   <!--  <ViewStub-->
   <!--    android:layout="@layout/activity_main"-->
   <!--    android:layout_width="wrap_content"-->
