--- a/example/src/main/res/layout/content_main.xml
+++ b/example/src/main/res/layout/content_main.xml
@@ -25,7 +25,7 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-  <TextView
+  <com.littlew.example.pc.ATxtCusView
     android:id="@+id/donine_text"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
